--- a/components/ManhwaPage/MobileView.module.css
+++ b/components/ManhwaPage/MobileView.module.css
@@ -1,4 +1,4 @@
-/* MobileView.module.css - Оновлена версія */
+  /* MobileView.module.css - Оновлена версія */
 
 /* ============================================
    ОСНОВНИЙ КОНТЕЙНЕР
@@ -271,3 +271,5 @@
     font-size: 15px;
   }
 }
+
+/* (scale removed) */
